Fix unused warnings https://bugs.webkit.org/show_bug.cgi?id=249734

Reviewed by Yusuke Suzuki.

* Source/WebCore/Modules/encryptedmedia/MediaKeys.cpp:
* Source/WebCore/Modules/encryptedmedia/NavigatorEME.cpp:
* Source/WebDriver/Session.cpp:
* Source/WebDriver/playstation/WebDriverServicePlayStation.cpp:
* Tools/WebKitTestRunner/TestOptions.cpp:

Canonical link: https://commits.webkit.org/258251@main